# SIC-Assembler

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  CommandIdentifier.cpp  CommandIdentifier.h  CommandParser.cpp  CommandParser.h  ErrorMsg.cpp  ErrorMsg.h  ExpressionEvaluator.h  FileReader.h  FileWriter.cpp  FileWriter.h  HexaConverter.cpp  LoopManager.cpp  LoopManager.h  OperationInfo.cpp  OperationInfo.h  PassOneManager.cpp  PassOneManager.h  PassTwoManager.cpp  PassTwoManager.h  PrimaryData.cpp  PrimaryData.h  README.md  main.cpp  test2.txt  testInput.txt
CommandsAndUtilities/: Command.cpp  Command.h  CommandIdentifier.cpp  CommandIdentifier.h  CommandParser.cpp  CommandParser.h  Literal.cpp  Literal.h
ConvertersAndEvaluators/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  HexaConverter.cpp  HexaConverter.h
DTOs/: ErrorMsg.h  ExternalSymbolInfo.h  Literal.cpp  Literal.h  ModificationRecord.h  OperandHolder.cpp  OperandHolder.h  OperationInfo.h  PassTwoData.h  PrimaryData.h  SymbolPosition.h  labelInfo.h
FileManipulators/: FileReader.cpp  FileWriter.cpp  FileWriter.h
Logger/: Logger.cpp  Logger.h
ObjectCodeAndModificationRecord/: ModificationRecordCalculation.cpp  ModificationRecordCalculation.h  ObjectCodeCalculation.cpp  ObjectCodeCalculation.h
PassesLogic/: PassOneManager.cpp  PassOneManager.h  PassTwoManager.cpp  PassTwoManager.h
test cases from lectures/: fig.txt  testA.txt  testB.txt  testC.txt
testCasesFromLectures/: testB-Ans.txt  testB.txt  testC.txt
